--- a/project/index.html
+++ b/project/index.html
@@ -58,7 +58,8 @@
     <!-- footer start -->
     <footer class="blue-bg">
         <div class="dev container">
-            <p>Developed by : { }</p>
+            <p>Developed by : Bethlehem Duguna</p>
+            <p>2022/23</p>
         </div>
     </footer>
     <!-- footer end -->
