--- a/project/index.html
+++ b/project/index.html
@@ -58,7 +58,7 @@
     <!-- footer start -->
     <footer class="blue-bg">
         <div class="dev container">
-            <p>Developed by : { }</p>
+            <p>Developed by : Gebrehiwot</p>
         </div>
     </footer>
     <!-- footer end -->
